Crud of addresses almost finished
Making some tests

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
 #Generar las tablas, actualizarlas o crearlas y borrarlas luego de usarse
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #para leer los queries sql guardados en la carpeta resources e inicializarlos (el archivo debe llamarse "nombreArchivo"-"motorBaseDeDatos".sql)
 spring.sql.init.platform=h2
